# project_musical-symbol-image-generator

./: .gitignore  CMakeLists.txt  DevelopmentList.txt  LICENSE  ProgressChart.pages  ProgressCheck.pages  README.md  TODO.txt  ToDoList.txt
include/: CMakeLists.txt  dst.hpp  msig.hpp  msig_API.hpp  msig_Algorithm.hpp  msig_Algorithm_DST.hpp  msig_Algorithm_MSPA.hpp  msig_Canvas.hpp  msig_MSIG.hpp  msig_Matrix.hpp  msig_MusicalSymbol.hpp  msig_MusicalSymbolType.hpp  msig_Note.hpp  msig_Processing.hpp  msig_Rendering.hpp  msig_Structure.hpp  msig_Synthesize.hpp  msig_Util.hpp  msig_Utility.hpp  msig_common.hpp  note.hpp
lib/: Brush.cpp  CMakeLists.txt  Canvas.cpp  DependentSelectionTree.cpp  Folder.cpp  Image.cpp  Matrix.cpp  MusicalSymbol.cpp  MusicalSymbolAssemble.cpp  dst.cpp  dst_API.cpp  functions.cpp  msig_Algorithm_DST.cpp  msig_Algorithm_MSPA.cpp  msig_Canvas.cpp  msig_Canvas_API.cpp  msig_Canvas_Draw.cpp  msig_Canvas_Init.cpp  msig_Canvas_User.cpp  msig_MSIG.cpp  msig_Matrix.cpp  msig_MusicalSymbol.cpp  msig_MusicalSymbol_Data.cpp  msig_MusicalSymbol_Init.cpp  msig_MusicalSymbol_Operator.cpp  msig_MusicalSymbol_Preprocessing.cpp  msig_MusicalSymbol_Utility.cpp  msig_Note.cpp  msig_Note_API.cpp  msig_Note_Backup.cpp  msig_Note_Draw.cpp  msig_Note_Init.cpp  msig_Note_Utility.cpp  msig_Note_add.cpp  msig_Note_draw.cpp  msig_Note_error.cpp  msig_Note_img.cpp  msig_Note_init.cpp  msig_Note_matrix_processing.cpp  msig_Note_set.cpp  (+13 more)
src/: CMakeLists.txt  main.cpp  ui.cpp
src_io/: theory.txt
src_io/ms-datasets/note-recognition/: __rule__.txt
src_io/ms-datasets/note-recognition/note-up/: __rule__.txt
src_io/ms-datasets/symbol-recognition/measure-center/: __rule__.txt
src_io/new-symbol-dataset/: symbol_dataset_config.txt
src_io/note-head/: __config__.txt
src_io/note-recognition/: __config__.txt  __rule__.txt
src_io/note-recognition/note-down/: __config__.txt  __rule__.txt
src_io/note-recognition/note-down/accidental/: __config__.txt
src_io/note-recognition/note-down/articulation/: __config__.txt  __rule__.txt
src_io/note-recognition/note-down/dynamic/: __config__.txt
src_io/note-recognition/note-down/glissando/: __config__.txt  __rule__.txt
src_io/note-recognition/note-down/octave/: __config__.txt
src_io/note-recognition/note-down/ornament/: __config__.txt  __rule__.txt
src_io/note-recognition/note-down/repetition/: __config__.txt
src_io/note-recognition/note-down/tie/: __config__.txt
src_io/note-recognition/note-up/: __config__.txt  __rule__.txt
src_io/note-recognition/note-up/accidental/: __config__.txt  __rule__.txt
src_io/note-recognition/note-up/articulation/: __config__.txt  __rule__.txt
src_io/note-recognition/note-up/dynamic/: __rule__.txt  (+1 more)
src_io/note/note-down/: __config__.txt  __rule__.txt
src_io/note/note-up/: __config__.txt  __rule__.txt
src_io/staff-end/: __config__.txt
src_io/staff-end/measure/: __config__.txt  __rule__.txt
src_io/staff-note/: __rule__.txt
src_io/staff-note-compound/: __config__.txt  __rule__.txt
src_io/staff-note-compound/note-center-down/: __config__.txt  __rule__.txt
src_io/staff-note-compound/note-center-up/: __config__.txt  __rule__.txt
src_io/staff-note-compound/note-down/: __config__.txt  __rule__.txt
src_io/staff-note-compound/note-up/: __config__.txt  __rule__.txt
src_io/staff-note-simple/: __config__.txt
src_io/staff-note-simple/note-down/: __config__.txt  __rule__.txt
src_io/staff-note-simple/note-up/: __config__.txt  __rule__.txt
src_io/staff-start/: __config__.txt
src_io/symbol-dataset/: symbol_dataset_config.txt
src_io/symbol-recognition/: __config__.txt  __rule__.txt
src_io/symbol-recognition/clef/: __config__.txt  __rule__.txt
src_io/symbol-recognition/key/: __config__.txt  __rule__.txt
src_io/symbol-recognition/measure-center/: __config__.txt  __rule__.txt
src_io/symbol-recognition/measure-end/: __config__.txt  __rule__.txt
src_io/symbol-recognition/measure-start/: __config__.txt  __rule__.txt
src_io/symbol-recognition/note/: __config__.txt  __rule__.txt
src_io/symbol-recognition/repetition/: __config__.txt  __rule__.txt
src_io/symbol-recognition/rest/: __config__.txt  __rule__.txt
src_io/symbol-recognition/time/: __config__.txt  __rule__.txt
(+80 files in other folders)
